updated disclaimer message on discover page

--- a/public/discover.html
+++ b/public/discover.html
@@ -56,7 +56,7 @@
                 <div class="centeredText">
                     <h1>Get started on discovering great local businesses!</h1>
                     <br>
-                    <h4 id="UnderConstruction">This page is still under construction!</h4>
+                    <h4 id="UnderConstruction">This page is still under construction! More features to come in the following weeks.</h4>
                 </div>
             </div>
         </div>
