changed zip code to postal code

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -153,7 +153,7 @@
                         <br>
                         <br>
                         <div class="col-md-4">
-                            <input placeholder="Zip Code" id="zipCode" name="zipCode" type="text" class="form-control"/>
+                            <input placeholder="Postal Code" id="postalCode" name="postalCode" type="text" class="form-control"/>
                         </div>
                     </div>
                 </div>
