udpated discover page to test description and hours collapsable button

--- a/public/discover.html
+++ b/public/discover.html
@@ -136,6 +136,25 @@
                             </div>
                         </div>
 
+                        <!-- Description Collapse Button -->
+                        <div class="collapseButtonSection">
+                            <button class="btn btn-primary collapseButton" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                                Description & Hours
+                              </button>
+                            <div class="collapse collapseButtonArea" id="collapseExample">
+                                <div class="card card-body">
+                                        <p>
+                                        Nancy Johns Gallery & Framing is a commercial art gallery, with custom picture framing services.
+                                        We represent fine art from Windsor/Essex County and provide the city's only art rental program.
+                                        <br><br>
+                                        Tuesday - Friday: 10am to 6pm
+                                        <br>
+                                        Sunday - Monday: Closed
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
                         <hr>
                     </div>
                     <!-- * This is what a complete div will look like for a single business object -->
