added the first iteration of the filter results section. This does NOT utilize a database, just simple html+javascript to hide and show items(divs) that meet the criteria. Known bug: If two items are on separate rows but have the same filter tag, they will appear on seperate rows and not on the same one

--- a/public/discover.html
+++ b/public/discover.html
@@ -70,7 +70,8 @@
 
                 <button class="btn btn-secondary category-button filter-button" data-filter="recentlyadded">Recently Added</button>
                 <button class="btn btn-secondary category-button filter-button" data-filter="restaurant">Restaurant</button>
-                <button class="btn btn-secondary category-button filter-button" data-filter="beauty">Beauty</button>
+                <button class="btn btn-secondary category-button filter-button" data-filter="food">Food</button>
+                <button class="btn btn-secondary category-button filter-button" data-filter="healthandwellness">Health & Wellness</button>
                 <button class="btn btn-secondary category-button filter-button" data-filter="shopping">Shopping</button>
                 <button class="btn btn-secondary category-button filter-button" data-filter="accessories">Accessories</button>
                 <button class="btn btn-secondary category-button filter-button" data-filter="entertainment">Entertainment</button>
@@ -168,10 +169,10 @@
                 </div>
 
                 <!-- ! Item 2 -->
-                <div class="col-md-4 item filter shopping recentlyadded">
+                <div class="col-md-4 item filter food recentlyadded">
                     <!-- * Basic Info-->
                     <h1>DeMarco's Fine Foods</h1>
-                    <h3>Shopping</h3>
+                    <h3>Food</h3>
                     <h4>Grocery Store</h4>
                     <img class="business_image" src="/images/demarcosfinefoods.jpeg" />
                     <br>
@@ -246,7 +247,7 @@
             <!-- ! row 2 -->
             <div class="row">
                 <!-- ! Item 1 -->
-                <div class="col-md-4 item filter recentlyadded">
+                <div class="col-md-4 item filter food recentlyadded">
                     <!-- * Basic Info-->
                     <h1>Felipe's Blazin BBQ</h1>
                     <h3>Food</h3>
@@ -326,7 +327,7 @@
                 </div>
 
                 <!-- ! Item 3 -->
-                <div class="col-md-4 item filter recentlyadded beauty">
+                <div class="col-md-4 item filter recentlyadded healthandwellness">
                     <!-- * Basic Info -->
                     <h1>Manual Therapy Clinic</h1>
                     <h3>Health & Wellness</h3>
