updated nancy's hours

--- a/public/discover.html
+++ b/public/discover.html
@@ -160,6 +160,8 @@
                                     <br><br>
                                     Tuesday - Friday: 10am to 6pm
                                     <br>
+                                    Saturday: 10am to 4pm
+                                    <br>
                                     Sunday - Monday: Closed
                                 </p>
                             </div>
