fixed the weird filter button issue by making one giant row and putting columns inside of it instead of having a single row with only 3 columns inside of it. Added a greeting message on index page.

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
         <h1>Wertigo</h1>
         <p>The local-friendly website for when you ask yourself where to go.</p>
         <h4>Coming soon in 2022!</h4>
+        <h4>Follow us on Instagram <a href="https://www.instagram.com/wertigocanada/" id="wertigo-link" target="_blank" rel="noopener noreferrer">@wertigocanada</a> for regular updates!</h4>
     </div>
 
     <div class="container">
