removed phone number from bbq and updated contact us page to make phone number -> business phone number and no longer make it required (with a note, will be public to let user know)

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -81,8 +81,8 @@
                         <br>
                         <br>
                         <div class="col-md-4">
-                            <input placeholder="Phone Number*" id="phoneNumber" type="text" name="phoneNumber"
-                                class="form-control" required />
+                            <input placeholder="Business Phone Number (Will be public)" id="phoneNumber" type="text" name="phoneNumber"
+                                class="form-control"/>
                         </div>
                     </div>
                 </div>
