--- a/public/template-business-object.html
+++ b/public/template-business-object.html
@@ -1,18 +1,18 @@
 <!-- Item # -->
-<div class="col-md-4 item filter shopping recentlyadded">
+<div class="col-md-4 border-bottom item filter shopping recentlyadded">
     <!-- * Basic Info -->
-    <h1>Nancy Johns Gallery</h1>
-    <h3>Shopping</h3>
-    <h4>Framing and Art</h4>
-    <img class="business_image" src="/images/nancyjohnsgallery.jpg" />
+    <h1>BUSINESS NAME HERE</h1>
+    <h3>BUSINESS CATEGORY</h3>
+    <h4>SUBCATEGORY</h4>
+    <img class="business_image" src="/images/defaultpicture.jpg" />
     <br>
 
-    <h5><a href="tel:519-945-2222" class="phonenumber">519-945-2222</a></h5>
+    <h5><a href="tel:123-456-7890" class="phonenumber">123-456-7890</a></h5>
     <!-- * Website Link -->
     <div class="businessLinkPic">
         <img src="/images/website_logo.png" class="linkLogos" />
         <div class="businessLinkText">
-            <p><a href="https://www.nancyjohns.com" target="_blank" rel="noopener noreferrer"
+            <p><a href="" target="_blank" rel="noopener noreferrer"
                     class="businessLinks">Website</a></p>
         </div>
     </div>
@@ -22,40 +22,31 @@
     <div class="businessLinkPic">
         <img src="/images/instagramlogo.png" class="linkLogos" />
         <div class="businessLinkText">
-            <p><a href="https://www.instagram.com/nancyjohnsgallery/" target="_blank"
-                    rel="noopener noreferrer" class="businessLinks">@nancyjohnsgallery</a></p>
+            <p><a href="" target="_blank"
+                    rel="noopener noreferrer" class="businessLinks">@instagramname</a></p>
         </div>
     </div>
+    <br>
 
     <!-- * Business Address -->
     <div class="businessLinkPic">
         <img src="/images/pin-icon.png" class="linkLogos" />
         <div class="businessLinkText">
-            <p><a href="https://maps.apple.com/?address=4755%20Wyandotte%20St%20E,%20Windsor%20ON%20N8Y%201H8,%20Canada&auid=1736470343631369272&ll=42.326220,-82.979521&lsp=9902&q=Nancy%20Johns%20Gallery%20%26%20Framing&_ext=CjIKBAgEEGIKBAgFEAMKBQgGEIUBCgQIChAACgQIUhACCgQIVRAPCgQIWRACCgUIpAEQARImKXm9RWIuKUVAMTi9owAUv1TAOfeSa75UKkVAQdijs+1MvlTAUAM%3D"
-                    target="_blank" rel="noopener noreferrer" class="businessLinks">4755 Wyandotte St E,
-                    Windsor ON, N8Y 1H8</a></p>
+            <p><a href=""
+                    target="_blank" rel="noopener noreferrer" class="businessLinks">Address Here</a></p>
         </div>
     </div>
 
     <!-- * Description Collapse Button -->
     <div class="collapseButtonSection">
         <button class="btn btn-primary collapseButton" type="button" data-bs-toggle="collapse"
-            data-bs-target="#nancyjohnsgallery" aria-expanded="false" aria-controls="nancyjohnsgallery">
+            data-bs-target="#insertbusinessnamehere" aria-expanded="false" aria-controls="insertbusinessnamehere">
             Description & Hours
         </button>
-        <div class="collapse" id="nancyjohnsgallery">
+        <div class="collapse" id="insertbusinessnamehere">
             <div class="card card-body">
                 <p>
-                    Nancy Johns Gallery & Framing is a commercial art gallery, with custom picture
-                    framing services.
-                    We represent fine art from Windsor/Essex County and provide the city's only art
-                    rental program.
-                    <br><br>
-                    Tuesday - Friday: 10am to 6pm
-                    <br>
-                    Saturday: 10am to 4pm
-                    <br>
-                    Sunday - Monday: Closed
+                   Insert Information and Hours here.
                 </p>
             </div>
         </div>
