updated bella armande, added border-2 class to items to make line thicker

--- a/public/template-business-object.html
+++ b/public/template-business-object.html
@@ -1,5 +1,5 @@
-<!-- Item # -->
-<div class="col-md-4 border-bottom item filter shopping recentlyadded">
+<!-- ! START of BUSINESS NAME HERE -->
+<div class="col-md-4 border-bottom border-2 item filter shopping recentlyadded">
     <!-- * Basic Info -->
     <h1>BUSINESS NAME HERE</h1>
     <h3>BUSINESS CATEGORY</h3>
@@ -53,3 +53,4 @@
     </div>
     <br>
 </div>
+<!-- ! END of BUSINESS NAME HERE -->
