updated each page with taglines below main header

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -48,6 +48,7 @@
     <!-- Header Code -->
     <div class="jumbotron">
         <h1>Contact Us</h1>
+        <h4>Regardless of the age and type of your business, sign up here for free!</h4>
     </div>
 
     <!-- Main Body Content -->
