--- a/public/discover.html
+++ b/public/discover.html
@@ -49,6 +49,7 @@
 
     <div class="jumbotron">
         <h1>Discover Local</h1>
+        <h4>From existing and fan-favourites, to new and upcoming, discover local businesses here!</h4>
     </div>
 
     <div class="container">
