--- a/public/faq.html
+++ b/public/faq.html
@@ -48,6 +48,7 @@
 
     <div class="jumbotron">
         <h1>FAQ</h1>
+        <h4>Learn a bit about us and our goal!</h4>
     </div>
 
     <div class="container">
