--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,9 @@
 
     <div class="jumbotron">
         <h1>Wertigo</h1>
-        <p>The local-friendly website for when you ask yourself where to go.</p>
-        <h4>Coming soon in 2022!</h4>
-        <h4>Follow us on Instagram <a href="https://www.instagram.com/wertigocanada/" id="wertigo-link" target="_blank" rel="noopener noreferrer">@wertigocanada</a> for regular updates!</h4>
+        <h4>The local-friendly website for when you ask yourself where to go.</h4>
+        <h5>Coming soon in 2022!</h5>
+        <h5>Follow us on Instagram <a href="https://www.instagram.com/wertigocanada/" id="wertigo-link" target="_blank" rel="noopener noreferrer">@wertigocanada</a> for regular updates!</h5>
     </div>
 
     <div class="container">
