updated subcategory area to switch depending on which main category was clicked on

--- a/public/discover.html
+++ b/public/discover.html
@@ -115,6 +115,11 @@
             </div>
         </div>
         <hr>
+
+        <!-- 
+            ! The 'data-filter' option determines which items will be filtered out based on the name of the 'data-filter' option.
+            ! The 'filter <names>' option determines which data-filters will cause that item to show itself.
+        -->
         <!-- * TESTING Filter by Subcategory-->
         <div class="filter-subcategory-area">
             <!-- * TESTING the accordion Bootstrap feature -->
