added a seperate page for business, created a new folder for these. Updated some minor things as well

--- a/public/discover.html
+++ b/public/discover.html
@@ -186,7 +186,7 @@
                 <!-- ! START of Nancy Johns Gallery -->
                 <div class="col-md-4 border-bottom border-2 item filter shopping recentlyadded art">
                     <!-- * Basic Info -->
-                    <h1>Nancy Johns Gallery</h1>
+                    <a href="/public/businessPages/nancyjohnsgallery.html" class="businessHeaderLink"><h1>Nancy Johns Gallery</h1></a>
                     <h3>Shopping</h3>
                     <h4>Framing and Art</h4>
                     <img class="business_image" src="/images/nancyjohnsgallery.jpg" />
