--- a/public/faq.html
+++ b/public/faq.html
@@ -107,6 +107,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- ADDS FILLER/PADDING TO PAGE BELOW -->
         <div class="row justify-content-center">
             <div class="col">
                 <div class="centeredText">
