added a seperate page for business, created a new folder for these. Updated some minor things as well

--- a/public/businessPages/nancyjohnsgallery.html
+++ b/public/businessPages/nancyjohnsgallery.html
@@ -50,8 +50,9 @@
         <h1>Nancy Johns Gallery</h1>
         <br>
         <img class="business_image" src="/images/nancyjohnsgallery.jpg" />
+        <!-- 
         <br><br>
-        <a href="/discover.html" class="backToDiscoverLink"><p> < Back to Discover Page</p></a>
+        <a href="/discover.html" class="backToDiscoverLink"><p> < Back to Discover Page</p></a> -->
     </div>
 
     <div class="container">
@@ -76,27 +77,27 @@
                     <div class="businessLinkPic">
                         <img src="/images/website_logo.png" class="linkLogosPage" />
                         <div class="businessLinkText">
-                            <p id="informationText"><a href="https://www.nancyjohns.com" target="_blank" rel="noopener noreferrer"
+                            <p id="informationTextLinks"><a href="https://www.nancyjohns.com" target="_blank" rel="noopener noreferrer"
                                     class="businessLinks">Nancy Johns Gallery Website</a></p>
                         </div>
                     </div>
 
-                    <br><br>
+                    <br>
                     <!-- * Instagram Section -->
                     <div class="businessLinkPic">
                         <img src="/images/instagramlogo.png" class="linkLogosPage" />
                         <div class="businessLinkText">
-                            <p id="informationText"><a href="https://www.instagram.com/nancyjohnsgallery/" target="_blank"
+                            <p id="informationTextLinks"><a href="https://www.instagram.com/nancyjohnsgallery/" target="_blank"
                                     rel="noopener noreferrer" class="businessLinks">@nancyjohnsgallery</a></p>
                         </div>
                     </div>
 
-                    <br><br>
+                    <br>
                     <!-- * Business Address -->
                     <div class="businessLinkPic">
                         <img src="/images/pin-icon.png" class="linkLogosPage" />
                         <div class="businessLinkText">
-                            <p id="informationText"><a href="https://goo.gl/maps/p5pKiezHUttTf9yg6"
+                            <p id="informationTextLinks"><a href="https://goo.gl/maps/p5pKiezHUttTf9yg6"
                                     target="_blank" rel="noopener noreferrer" class="businessLinks">4755 Wyandotte St E,
                                     Windsor ON, N8Y 1H8</a></p>
                         </div>
@@ -111,7 +112,7 @@
 
                     <br>
                     <h1>Hours</h1>
-                    <p id="informationText">
+                    <p id="informationTextLinks">
                         Tuesday - Friday: 10am to 6pm
                         <br>
                         Saturday: 10am to 4pm
