added a seperate page for business, created a new folder for these. Updated some minor things as well

--- a/public/businessPages/nancyjohnsgallery.html
+++ b/public/businessPages/nancyjohnsgallery.html
@@ -120,17 +120,17 @@
                         Sunday - Monday: Closed
                     </p>
 
-
                 </div>
             </div>
         </div>
-        
+        <br>
+        <a href="/discover.html" class="backToDiscoverLink"><p> < Back to Discover Page</p></a>
         
         <!-- ADDS FILLER/PADDING TO PAGE BELOW -->
         <div class="row justify-content-center">
             <div class="col">
                 <div class="centeredText">
-                    <br><br>
+                    <br>
                 </div>
             </div>
         </div>
