--- a/public/businessPages/demarcosfinefoods.html
+++ b/public/businessPages/demarcosfinefoods.html
@@ -18,7 +18,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
 
-    <title>Nancy Johns Gallery</title>
+    <title>DeMarco's Fine Foods</title>
 </head>
 
 <body>
@@ -47,9 +47,9 @@
 
 
     <div class="jumbotron">
-        <h1>Nancy Johns Gallery</h1>
+        <h1>DeMarcoo's Fine Foods</h1>
         <br>
-        <img class="business_image" src="/images/nancyjohnsgallery.jpg" />
+        <img class="business_image" src="/images/demarcosfinefoods.jpeg" />
         <!-- 
         <br><br>
         <a href="/discover.html" class="backToDiscoverLink"><p> < Back to Discover Page</p></a> -->
@@ -62,29 +62,27 @@
                 <div class="centeredText">
                     <div class="block-text">
                         <!-- * Description Area -->
-                        <p id="informationText">Nancy Johns Gallery & Framing is a commercial art gallery, with custom
-                            picture
-                            framing services.
-                            We represent fine art from Windsor/Essex County and provide the city's only art
-                            rental program.</p>
+                        <p id="informationText">
+
+                        </p>
                     </div>
 
                     <!-- * Category and Subcategory -->
-                    <h1>Shopping</h1>
-                    <h2>Framing and Art</h2>
+                    <h1>Food</h1>
+                    <h2>Grocery Store</h1>
 
                     <br>
 
                     <!-- * Phone Number -->
-                    <h4><a href="tel:519-945-2222" class="phonenumber">519-945-2222</a></h4>
+                    <h4><a href="tel:519-969-7887" class="phonenumber">519-969-7887</a></h4>
 
                     <br>
                     <!-- * Website Link -->
                     <div class="businessLinkPic">
                         <img src="/images/website_logo.png" class="linkLogosPage" />
                         <div class="businessLinkText">
-                            <p id="informationTextLinks"><a href="https://www.nancyjohns.com" target="_blank"
-                                    rel="noopener noreferrer" class="businessLinks">Nancy Johns Gallery Website</a></p>
+                            <p id="informationTextLinks"><a href="https://www.demarcosfinefoods.com" target="_blank"
+                                    rel="noopener noreferrer" class="businessLinks">DeMarco's Fine Foods Website</a></p>
                         </div>
                     </div>
 
@@ -93,9 +91,9 @@
                     <div class="businessLinkPic">
                         <img src="/images/instagramlogo.png" class="linkLogosPage" />
                         <div class="businessLinkText">
-                            <p id="informationTextLinks"><a href="https://www.instagram.com/nancyjohnsgallery/"
+                            <p id="informationTextLinks"><a href="https://www.instagram.com/demarcosfinefoods/"
                                     target="_blank" rel="noopener noreferrer"
-                                    class="businessLinks">@nancyjohnsgallery</a></p>
+                                    class="businessLinks">@demarcosfinefoods</a></p>
                         </div>
                     </div>
 
@@ -104,9 +102,9 @@
                     <div class="businessLinkPic">
                         <img src="/images/pin-icon.png" class="linkLogosPage" />
                         <div class="businessLinkText">
-                            <p id="informationTextLinks"><a href="https://goo.gl/maps/p5pKiezHUttTf9yg6" target="_blank"
-                                    rel="noopener noreferrer" class="businessLinks">4755 Wyandotte St E,
-                                    Windsor ON, N8Y 1H8</a></p>
+                            <p id="informationTextLinks"><a href="https://goo.gl/maps/iLQacLPVk3FFqKPZ8" target="_blank"
+                                    rel="noopener noreferrer" class="businessLinks">1349 Grand Marais Rd W,
+                                    Windsor ON, N9E 1E2</a></p>
                         </div>
                     </div>
 
@@ -114,9 +112,7 @@
 
                     <!-- * Google maps embedded map -->
                     <div>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.7601646094004!2d-82.9817573845015!3d42.326313945224655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883b2b458060690f%3A0x7c27c27b9d2055e5!2sNancy%20Johns%20Gallery%20%26%20Framing!5e0!3m2!1sen!2sca!4v1640644420421!5m2!1sen!2sca"
-                            width="95%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2952.5018781982026!2d-83.02871048450302!3d42.267808948915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883b2c2f9c35f17b%3A0xca5d55e263c8fd19!2sDeMarco&#39;s%20Fine%20Foods!5e0!3m2!1sen!2sca!4v1640657531167!5m2!1sen!2sca" width="95%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
 
                     <br>
@@ -124,11 +120,13 @@
                     <!-- * Hours and information -->
                     <h1>Hours</h1>
                     <p id="informationTextLinks">
+                        Monday: <b>Closed</b>
+                        <br>
                         Tuesday - Friday: <b>10am to 6pm</b>
                         <br>
-                        Saturday: <b>10am to 4pm</b>
+                        Saturday: <b>10am to 5pm</b>
                         <br>
-                        Sunday - Monday: <b>Closed</b>
+                        Sunday: <b>10am to 3pm</b>
                     </p>
 
                 </div>
