--- a/public/discover.html
+++ b/public/discover.html
@@ -58,8 +58,8 @@
                 <div class="centeredText">
                     <!-- <h1>Get started on discovering great local businesses!</h1> -->
                     <br>
-                    <h4 id="UnderConstruction">This page is still under construction! More features to come in the
-                        following weeks.</h4>
+                    <p id="UnderConstruction">This page is still under construction! More features to come in the
+                        following weeks.</p>
                 </div>
             </div>
         </div>
@@ -216,7 +216,7 @@
                     <div class="businessLinkPic">
                         <img src="/images/pin-icon.png" class="linkLogos" />
                         <div class="businessLinkText">
-                            <p><a href="https://maps.apple.com/?address=4755%20Wyandotte%20St%20E,%20Windsor%20ON%20N8Y%201H8,%20Canada&auid=1736470343631369272&ll=42.326220,-82.979521&lsp=9902&q=Nancy%20Johns%20Gallery%20%26%20Framing&_ext=CjIKBAgEEGIKBAgFEAMKBQgGEIUBCgQIChAACgQIUhACCgQIVRAPCgQIWRACCgUIpAEQARImKXm9RWIuKUVAMTi9owAUv1TAOfeSa75UKkVAQdijs+1MvlTAUAM%3D"
+                            <p><a href="https://goo.gl/maps/p5pKiezHUttTf9yg6"
                                     target="_blank" rel="noopener noreferrer" class="businessLinks">4755 Wyandotte St E,
                                     Windsor ON, N8Y 1H8</a></p>
                         </div>
@@ -236,11 +236,11 @@
                                     We represent fine art from Windsor/Essex County and provide the city's only art
                                     rental program.
                                     <br><br>
-                                    Tuesday - Friday: 10am to 6pm
+                                    Tuesday - Friday: <b>10am to 6pm</b>
                                     <br>
-                                    Saturday: 10am to 4pm
+                                    Saturday: <b>10am to 4pm</b>
                                     <br>
-                                    Sunday - Monday: Closed
+                                    Sunday - Monday: <b>Closed</b>
                                 </p>
                             </div>
                         </div>
@@ -252,7 +252,7 @@
                 <!-- ! START of DeMarco's fine foods -->
                 <div class="col-md-4 border-bottom border-2 item filter food recentlyadded grocerystore">
                     <!-- * Basic Info-->
-                    <h1>DeMarco's Fine Foods</h1>
+                    <a href="/public/businessPages/demarcosfinefoods.html" class="businessHeaderLink"><h1>DeMarco's Fine Foods</h1></a>
                     <h3>Food</h3>
                     <h4>Grocery Store</h4>
                     <img class="business_image" src="/images/demarcosfinefoods.jpeg" />
@@ -284,18 +284,40 @@
                     <div class="businessLinkPic">
                         <img src="/images/pin-icon.png" class="linkLogos" />
                         <div class="businessLinkText">
-                            <p><a href="https://g.page/Demarcosfinefoods?share" target="_blank"
+                            <p><a href="https://goo.gl/maps/iLQacLPVk3FFqKPZ8" target="_blank"
                                     rel="noopener noreferrer" class="businessLinks">1349 Grand Marais Rd W,
                                     Windsor ON, N9E 1E2</a></p>
                         </div>
                     </div>
+
+                    <!-- * Description Collapse Button -->
+                    <div class="collapseButtonSection">
+                        <button class="btn btn-primary collapseButton" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#demarcosfinefoods" aria-expanded="false" aria-controls="demarcosfinefoods">
+                            Hours
+                        </button>
+                        <div class="collapse" id="demarcosfinefoods">
+                            <div class="card card-body">
+                                <p>
+                                    Monday: <b>Closed</b>
+                                    <br>
+                                    Tuesday - Friday: <b>10am to 6pm</b>
+                                    <br>
+                                    Saturday: <b>10am to 5pm</b>
+                                    <br>
+                                    Sunday: <b>10am to 3pm</b>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
                 <!-- ! END of DeMarco's fine foods -->
 
                 <!-- ! START of Bella Armande Jewelry -->
                 <div class="col-md-4 border-bottom border-2 item filter accessories recentlyadded jewelry">
                     <!-- * Basic Info-->
-                    <h1>Bella Armande Jewelry</h1>
+                    <a href="/public/businessPages/bellaarmandejewelry.html" class="businessHeaderLink"><h1>Bella Armande Jewelry</h1></a>
                     <h3>Accessories</h3>
                     <h4>Jewelry</h4>
                     <img class="business_image" src="/images/bellaarmande.jpg" />
@@ -335,7 +357,7 @@
                 <!-- ! START of Felipe's Blazin BBQ -->
                 <div class="col-md-4 border-bottom border-2 item filter food recentlyadded sauces">
                     <!-- * Basic Info-->
-                    <h1>Felipe's Blazin BBQ</h1>
+                    <a href="/public/businessPages/felipesblazinbbq.html" class="businessHeaderLink"><h1>Felipe's Blazin BBQ</h1></a>
                     <h3>Food</h3>
                     <h4>Sauces</h4>
                     <img class="business_image" src="/images/felipebbq.jpg" />
@@ -376,7 +398,7 @@
                 <!-- ! START of Threedee Lab -->
                 <div class="col-md-4 border-bottom border-2 item filter recentlyadded accessories gifts">
                     <!-- * Basic Info-->
-                    <h1>Threedee Lab</h1>
+                    <a href="/public/businessPages/threedeelab.html" class="businessHeaderLink"><h1>Threedee Lab</h1></a>
                     <h3>Accessories</h3>
                     <h4>Gifts</h4>
                     <img class="business_image" src="/images/3dlab.JPG" />
@@ -416,7 +438,7 @@
                 <!-- ! START of Manual Therapy Clinic -->
                 <div class="col-md-4 border-bottom border-2 item filter recentlyadded healthandwellness massagetherapy">
                     <!-- * Basic Info -->
-                    <h1>Manual Therapy Clinic</h1>
+                    <a href="/public/businessPages/manualtherapyclinic.html" class="businessHeaderLink"><h1>Manual Therapy Clinic</h1></a>
                     <h3>Health & Wellness</h3>
                     <h4>Massage Therapy</h4>
                     <img class="business_image" src="/images/defaultpicture.jpg" />
@@ -456,7 +478,7 @@
                     <div class="businessLinkPic">
                         <img src="/images/pin-icon.png" class="linkLogos" />
                         <div class="businessLinkText">
-                            <a href="https://maps.apple.com/?address=1236%20Tecumseh%20Rd%20E,%20Windsor%20ON%20N8W%201B6,%20Canada&ll=42.300213,-83.006644&q=1236%20Tecumseh%20Rd%20E&_ext=EiYpLf/GNNolRUAxydXlWdDAVMA5q9TskAAnRUBBr4UDXAnAVMBQAw%3D%3D"
+                            <a href="https://goo.gl/maps/US8QV5Un6o9F94RF9"
                                 target="_blank" rel="noopener noreferrer" class="businessLinks">
                                 <p>1236 Tecumseh Rd E, Windsor ON, N8W 1B8</p>
                             </a>
@@ -485,7 +507,7 @@
                 <!-- ! START of Glamour Events -->
                 <div class="col-md-4 border-bottom border-2 item filter recentlyadded events weddings">
                     <!-- * Basic Info -->
-                    <h1>Glamour Events</h1>
+                    <a href="/public/businessPages/glamourevents.html" class="businessHeaderLink"><h1>Glamour Events</h1></a>
                     <h3>Events</h3>
                     <h4>Weddings and Events Decor</h4>
                     <img class="business_image" src="/images/glamourevents.jpg" />
