--- a/public/businessPages/manualtherapyclinic.html
+++ b/public/businessPages/manualtherapyclinic.html
@@ -18,7 +18,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
 
-    <title>Nancy Johns Gallery</title>
+    <title>Manual Therapy Clinic</title>
 </head>
 
 <body>
@@ -47,9 +47,11 @@
 
 
     <div class="jumbotron">
-        <h1>Nancy Johns Gallery</h1>
+        <h1>Manual Therapy Clinic</h1>
         <br>
-        <img class="business_image" src="/images/nancyjohnsgallery.jpg" />
+
+        <!-- * Business Logo -->
+        <img class="business_image" src="/images/defaultpicture.jpg" />
         <!-- 
         <br><br>
         <a href="/discover.html" class="backToDiscoverLink"><p> < Back to Discover Page</p></a> -->
@@ -62,51 +64,59 @@
                 <div class="centeredText">
                     <div class="block-text">
                         <!-- * Description Area -->
-                        <p id="informationText">Nancy Johns Gallery & Framing is a commercial art gallery, with custom
-                            picture
-                            framing services.
-                            We represent fine art from Windsor/Essex County and provide the city's only art
-                            rental program.</p>
+                        <p id="informationText">
+                            Online booking available for clinic, by appointment only. In home massage therapy
+                            also available. Inquire within.
+                        </p>
                     </div>
 
                     <!-- * Category and Subcategory -->
-                    <h1>Shopping</h1>
-                    <h2>Framing and Art</h2>
+                    <h1>Health & Wellness</h1>
+                    <h2>Massage Therapy</h2>
 
                     <br>
 
                     <!-- * Phone Number -->
-                    <h4><a href="tel:519-945-2222" class="phonenumber">519-945-2222</a></h4>
+                    <h4><a href="tel:226-260-2927" class="phonenumber">226-260-2927</a></h4>
 
                     <br>
                     <!-- * Website Link -->
                     <div class="businessLinkPic">
-                        <img src="/images/website_logo.png" class="linkLogosPage" />
+                        <img src="/images/website_logo.png" class="linkLogos" />
                         <div class="businessLinkText">
-                            <p id="informationTextLinks"><a href="https://www.nancyjohns.com" target="_blank"
-                                    rel="noopener noreferrer" class="businessLinks">Nancy Johns Gallery Website</a></p>
+                            <p id="informationTextLinks"><a href="https://mtc.janeapp.com" target="_blank" rel="noopener noreferrer"
+                                    class="businessLinks">MT Clinic Website</a></p>
                         </div>
                     </div>
 
                     <br>
                     <!-- * Instagram Section -->
                     <div class="businessLinkPic">
-                        <img src="/images/instagramlogo.png" class="linkLogosPage" />
+                        <img src="/images/instagramlogo.png" class="linkLogos" />
                         <div class="businessLinkText">
-                            <p id="informationTextLinks"><a href="https://www.instagram.com/nancyjohnsgallery/"
-                                    target="_blank" rel="noopener noreferrer"
-                                    class="businessLinks">@nancyjohnsgallery</a></p>
+                            <p id="informationTextLinks"><a href="https://www.instagram.com/nwagner.rmt/" target="_blank"
+                                    rel="noopener noreferrer" class="businessLinks">@nwagner.rmt</a></p>
+                        </div>
+                    </div>
+                    <br>
+                    <!-- * Instagram Section -->
+                    <div class="businessLinkPic">
+                        <img src="/images/instagramlogo.png" class="linkLogos" />
+                        <div class="businessLinkText">
+                            <p id="informationTextLinks"><a href="https://www.instagram.com/themtclinic/" target="_blank"
+                                    rel="noopener noreferrer" class="businessLinks">@themtclinic</a></p>
                         </div>
                     </div>
 
                     <br>
                     <!-- * Business Address -->
                     <div class="businessLinkPic">
-                        <img src="/images/pin-icon.png" class="linkLogosPage" />
+                        <img src="/images/pin-icon.png" class="linkLogos" />
                         <div class="businessLinkText">
-                            <p id="informationTextLinks"><a href="https://goo.gl/maps/p5pKiezHUttTf9yg6" target="_blank"
-                                    rel="noopener noreferrer" class="businessLinks">4755 Wyandotte St E,
-                                    Windsor ON, N8Y 1H8</a></p>
+                            <a href="https://goo.gl/maps/US8QV5Un6o9F94RF9"
+                                target="_blank" rel="noopener noreferrer" class="businessLinks">
+                                <p id="informationTextLinks">1236 Tecumseh Rd E, Windsor ON, N8W 1B8</p>
+                            </a>
                         </div>
                     </div>
 
@@ -114,9 +124,7 @@
 
                     <!-- * Google maps embedded map -->
                     <div>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.7601646094004!2d-82.9817573845015!3d42.326313945224655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883b2b458060690f%3A0x7c27c27b9d2055e5!2sNancy%20Johns%20Gallery%20%26%20Framing!5e0!3m2!1sen!2sca!4v1640644420421!5m2!1sen!2sca"
-                            width="95%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.988050317444!2d-83.00803438070346!3d42.30012040226445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883b2dea5459de3d%3A0x6e455a62b73c6b8!2sManual%20Therapy%20Clinic!5e0!3m2!1sen!2sca!4v1640657761775!5m2!1sen!2sca" width="95%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
 
                     <br>
@@ -124,11 +132,7 @@
                     <!-- * Hours and information -->
                     <h1>Hours</h1>
                     <p id="informationTextLinks">
-                        Tuesday - Friday: <b>10am to 6pm</b>
-                        <br>
-                        Saturday: <b>10am to 4pm</b>
-                        <br>
-                        Sunday - Monday: <b>Closed</b>
+                        <b>Please check the website link above for times.</b>
                     </p>
 
                 </div>
