--- a/public/businessPages/demarcosfinefoods.html
+++ b/public/businessPages/demarcosfinefoods.html
@@ -47,7 +47,7 @@
 
 
     <div class="jumbotron">
-        <h1>DeMarco's Fine Foods</h1>
+        <h1 id="jtronSmallerFont">DeMarco's Fine Foods</h1>
         <br>
         <img class="business_image" src="/images/demarcosfinefoods.jpeg" />
         <!-- 
