--- a/public/businessPages/felipesblazinbbq.html
+++ b/public/businessPages/felipesblazinbbq.html
@@ -49,7 +49,7 @@
     <div class="jumbotron">
         <h1>Felipe's Blazin BBQ</h1>
         <br>
-        <img class="business_image" src="/images/felipebbq.JPG" />
+        <img class="business_image" src="felipebbq.JPG" />
         <!-- 
         <br><br>
         <a href="/discover.html" class="backToDiscoverLink"><p> < Back to Discover Page</p></a> -->
