updated contact us page to make it clearer if you want your private info to be public

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -87,6 +87,23 @@
                     </div>
                 </div>
                 <br>
+
+                <!-- * Test check -->
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col">
+                            <select placeholder="Share Your Information?" id="privacyCheck" name="privacyCheck" class="form-control"
+                            required>
+                            <option>Share Your Email and Phone Number? *</option>
+                            <option>Yes (Publicize both)</option>
+                            <option>Email only</option>
+                            <option>Phone Number only</option>
+                        </select>
+                        </div>
+                    </div>
+                </div>
+                <br>
+
                 <!-- Row 2 of Form 1 -->
                 <div class="form-group">
                     <div class="row">
